add screen 'Sobre'  e atualizando locales

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -92,5 +92,17 @@
     "status": "Estado",
     "numero": "Número",
     "patio": "Patio"
+  },
+  "sobre": {
+    "subtitulo": "Inteligencia para la gestión de patios",
+    "estavel": "Estable",
+    "versao": "Versión",
+    "build": "Build",
+    "commit": "Commit",
+    "ambiente": "Entorno",
+    "links": "Enlaces",
+    "codigo": "Código fuente",
+    "privacidade": "Política de Privacidad",
+    "rodape": "Gracias por usar nuestra app."
   }
 }
